fixed column spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
 .body {
 	background-color: #F7F7F9;
 }
+
+header {
+	background-color: tomato;
+	height: 100px;
+	width: 100%;
+	color: white;
+}
+
